--- a/인투처치/vercel.json
+++ b/인투처치/vercel.json
@@ -1,5 +1,12 @@
 {
     "version": 2,
+    "builds": [
+        {
+            "src": "config/wsgi.py",
+            "use": "@vercel/python",
+            "config": { "maxLambdaSize": "15mb", "runtime": "python3.12" }
+        }
+    ],
     "routes": [
         {
             "src": "/(.*)",
